--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
 
 }
 body {
-height: auto;
+height: 100vh;
 font-family: 'Poppins', sans-serif;
+/* color: red; */
+ display: flex;
+/* min-height: 100vh; */
+flex-direction: column; 
 }
 
 .home{
@@ -596,12 +600,12 @@ border-top: 2px solid #fff;
 width: 100%;
 }
 /*Footer Start*/
-.footer{
+/* .footer{
 display: flex;
 justify-content: space-between;
 flex-wrap: wrap;
-padding-bottom: 40px;
-}
+/* padding-bottom: 40px; }*/
+ 
 .copy-right {
 display: flex;
 flex-direction: column;
@@ -1001,7 +1005,7 @@ border-color: transparent  !important;
 .navbar-dark .navbar-toggler:focus{
 border:none !important;
 outline:none !important;
-box-shadow:none !importna;
+box-shadow:none !important;
 }
 .navbar-toggler img{
 width: 30px;
@@ -1065,6 +1069,25 @@ max-width: 270px;
 width: 100%;
 
 }
+
+.last {
+  position:relative;
+  margin-top: 5rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  margin-bottom: -20rem;
+}
+
+  .textin{
+    font-size: large;
+    color: gainsboro;
+    font-weight: bold;
+  }
+
+
+
 /* ===============kaicho home page end */
 /*======kaicho light theme start */
 .kaicho-light .nav-item .nav-link{
@@ -1107,6 +1130,18 @@ color: white !important;
 /*==========kaicho light theme end */
 /* Media  Queries */
 @media (min-width:320px) and (max-width:570px) {
+  .kaicho-home{
+    height: 100vh;
+    width:100vw;
+  }
+
+  .hirebox{
+    width: 90%;
+  }
+
+  .phone{
+    font-size: medium;
+  }
 span.under_red::after {
   content: "";
   left: 0px;
@@ -1119,6 +1154,23 @@ span.under_red::after {
 span a{
   color: white;
 }
+
+.last {
+  position:relative;
+  margin-top: 5rem;
+  bottom: 0;
+  left: 0;
+  width: 99vw;
+  height: auto;
+  margin-bottom: -10rem;
+}
+
+  .textin{
+    font-size: large;
+    color: gainsboro;
+    font-weight: bold;
+  }
+
 
 span a:hover{
   color: wheat;
@@ -1210,10 +1262,10 @@ font-size: 19px ;
   flex-direction: row;
 }
 /*footer section */
-.footer{
+/* .footer{
   flex-direction: column;
   padding: 10px 30px;
-}
+} */
 .right-section{
   margin-top: 40px;
 }
@@ -1440,3 +1492,4 @@ font-size: 25px;
     font-size: 16px;
     padding: 5px 20px;
     }
+  }
